use js config file

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "slash": "^3.0.0",
     "winston": "^3.3.3",
     "xml-js": "^1.6.11",
-    "yargs": "^16.2.0"
+    "yargs": "^16.2.0",
+    "zod": "^3.21.4"
   }
 }
