change entrypoint path

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prepublishOnly": "yarn build"
   },
   "bin": {
-    "codecoach": "dist/app.js"
+    "codecoach": "dist/index.js"
   },
   "files": [
     "dist/**/*"
