--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": ">=14.0.0"
   },
   "devDependencies": {
+    "@jscpd/finder": "^3.5.5",
     "@octokit/types": "^6.34.0",
     "@types/jest": "^26.0.18",
     "@types/js-yaml": "^4.0.0",
