--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@gitbeaker/node": "^35.7.0",
+    "@gitbeaker/rest": "^39.10.2",
     "@octokit/core": "^3.2.4",
     "@octokit/rest": "^18.12.0",
     "rimraf": "^3.0.2",
