--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": ">=14.0.0"
   },
   "devDependencies": {
+    "@jscpd/finder": "^3.5.5",
     "@octokit/types": "^6.34.0",
     "@types/jest": "^26.0.18",
     "@types/js-yaml": "^4.0.0",
@@ -45,7 +46,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@gitbeaker/node": "^35.7.0",
+    "@gitbeaker/rest": "^39.10.2",
     "@octokit/core": "^3.2.4",
     "@octokit/rest": "^18.12.0",
     "rimraf": "^3.0.2",
