--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@gitbeaker/core": "^42.5.0",
     "@gitbeaker/rest": "^39.10.2",
     "@octokit/core": "^3.2.4",
     "@octokit/rest": "^18.12.0",
