--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "devDependencies": {
     "@jscpd/finder": "^3.5.5",
     "@octokit/types": "^6.34.0",
+    "@types/glob": "^7.2.0",
     "@types/jest": "^26.0.18",
     "@types/js-yaml": "^4.0.0",
+    "@types/minimatch": "^3.0.5",
     "@types/node": "^14.14.11",
     "@types/rimraf": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
@@ -46,7 +48,6 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@gitbeaker/core": "^42.5.0",
     "@gitbeaker/rest": "^39.10.2",
     "@octokit/core": "^3.2.4",
     "@octokit/rest": "^18.12.0",
