--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "devDependencies": {
     "@jscpd/finder": "^3.5.5",
     "@octokit/types": "^6.34.0",
+    "@types/glob": "^7.2.0",
     "@types/jest": "^26.0.18",
     "@types/js-yaml": "^4.0.0",
+    "@types/minimatch": "^3.0.5",
     "@types/node": "^14.14.11",
     "@types/rimraf": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
